[package]
name = "r2d2"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = { git = "https://github.com/pepperoni21/ollama-rs.git", branch = "master", features = ["tool-implementations", "macros"] }
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
schemars = "1.0.4"
tokio-stream = "0.1.17"
regex = "1.11.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
figlet-rs = "0.1.5"
structopt = "0.3.26"
colored = "3.0.0"
